# wave-net

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
benches/: throughput.rs  throughput_bitnet.rs  throughput_driven.rs  throughput_resonate.rs  train_sidecar_compare.rs
docs/: criticality.md  experiments_results.md  experiments_results_seq_memory.md  related-work.md  sidecar_default.md
examples/: field_training.rs  inhibition_sweep.rs  params_study.rs  profile_bitnet.rs  profile_driven.rs  profile_driven_train.rs  profile_resonate.rs  profile_resonate_gpu.rs  profile_resonate_train.rs  profile_wave.rs
src/: lib.rs  main.rs
src/bench/: calibrate.rs  critical_init.rs  eprop.rs  linalg.rs  memory_capacity.rs  mod.rs  multilayer_dfa.rs  multilayer_dfa_bench.rs  multilayer_dfa_bitnet_bench.rs  readout.rs  regime.rs  rsnn.rs  store_recall.rs  stream.rs  temporal_xor.rs  wave_bitnet_bench.rs  wave_driven_bench.rs  wave_driven_seq_bench.rs  wave_resonate_bench.rs
src/legacy_net/: calibrate.rs  config.rs  depth.rs  input.rs  linalg.rs  mod.rs  pipeline.rs  readout.rs  stream.rs  train.rs  wiring.rs
src/wave_bitnet/: bits.rs  config.rs  mod.rs  multilayer_dfa.rs  network.rs  neurons.rs  persist.rs  synapse.rs  wave.rs
src/wave_driven/: config.rs  equivalence_tests.rs  frontier.rs  mod.rs  network.rs  neurons.rs  synapse.rs  training.rs  wave.rs
src/wave_net/: calibrate.rs  config.rs  critical_init.rs  depth.rs  eprop.rs  input.rs  mod.rs  multilayer_dfa.rs  network.rs  neurons.rs  pipeline.rs  readout.rs  stream.rs  synapse.rs  train.rs  wave.rs  wiring.rs
(+102 files in other folders)
